--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="d-flex flex-wrap justify-content-center py-3 border-bottom container">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <img src="../assets/images/logo.png" class="navbar-logo" alt="">
+          <img src="./assets/images/logo.png" class="navbar-logo" alt="">
           <span class="mx-3 fs-4  text-white">TOPAZIOTRAVEL</span>
         </a>
 
