--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="footer-copyright">
         <div class="container">
           <div class="col-lg-6" style="padding: 11px;">Topazio Travel © 2022<br><br><a class="btn-comprar2"
-              href="/buscarxpaquetes/arrepentimiento">BOTON DE ARREPENTIMIENTO</a>
+              href="#">BOTON DE ARREPENTIMIENTO</a>
             <div style="padding-top: 2%;"><b>Ley 24.240</b></div>
             <div><b>Autoridad Nacional de aplicación.</b></div>
             <div>Defensa de las y los Consumidores. Para reclamos ingrese<a
@@ -155,7 +155,7 @@
                 style="color: rgb(75, 89, 165);"> aquí</a></div>
           </div>
           <div class="col-lg-4" style="padding: 11px;">Somos parte de la red <a href="https://www.mundigea.com.ar"><img
-                src="/buscarxpaquetes/assets/img/logo-white.png" alt="Mundigea" style="margin-left: 3px;"></a></div>
+                src="#" alt="Mundigea" style="margin-left: 3px;"></a></div>
 
         </div>
       </div>
